[package]
name = "bevy_spatial_hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"

[lib]
name = "bevy_spatial_hashing"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"
