[package]
name = "bevy_spatial_hashing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"

[dev-dependencies]
rand = "*"
bevy_diagnostic = "*"
bevy_prototype_debug_lines = "0.9"
clap = { version = "4.1.*", features = ["derive"] }

[lib]
name = "bevy_spatial_hashing"
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/benchmark.rs"
